--- a/data/anaconda.conf
+++ b/data/anaconda.conf
@@ -158,6 +158,13 @@ preserved_arguments =
     biosdevname ipv6.disable net.ifnames net.ifnames.prefix
     nosmt vga
 
+# Disable the GRUB submenu
+disable_submenu = True
+
+# Set GRUB terminal type
+terminal_type =
+
+additional_default_grub_options =
 
 [Storage]
 # Enable iBFT usage during the installation.
