Support for setting encryption from configuration file

--- a/data/anaconda.conf
+++ b/data/anaconda.conf
@@ -167,6 +167,9 @@ terminal_type =
 additional_default_grub_options =
 
 [Storage]
+# Set encryption
+encrypted = False
+
 # Enable iBFT usage during the installation.
 ibft = True
 
