--- a/data/anaconda.conf
+++ b/data/anaconda.conf
@@ -66,6 +66,8 @@ can_save_installation_logs = True
 #
 default_on_boot = NONE
 
+# Set hostname
+hostname =
 
 [Payload]
 # Default package environment.
