Allow to specify default thin pool name and size

--- a/data/anaconda.conf
+++ b/data/anaconda.conf
@@ -221,6 +221,11 @@ default_scheme = LVM
 #
 luks_version = luks2
 
+# Default thin pool name
+thin_pool_name =
+
+# Default thin pool size
+thin_pool_size =
 
 [Storage Constraints]
 
