Use grub name-spaced for its options

--- a/data/profile.d/qubesos.conf
+++ b/data/profile.d/qubesos.conf
@@ -41,8 +41,8 @@ selinux = -1
 
 [Bootloader]
 efi_dir = qubes
-disable_submenu = False
-terminal_type = gfxterm
+disable_grub_submenu = False
+grub_terminal_type = gfxterm
 additional_default_grub_options =
     GRUB_THEME="/boot/grub2/themes/qubes/theme.txt"
     GRUB_CMDLINE_XEN_DEFAULT="console=none dom0_mem=min:1024M dom0_mem=max:4096M ucode=scan smt=off gnttab_max_frames=2048 gnttab_max_maptrack_frames=4096"
