Ignore empty values when parsing additional_default_grub_options
- Add also configuration comment

--- a/data/anaconda.conf
+++ b/data/anaconda.conf
@@ -166,6 +166,7 @@ disable_grub_submenu = True
 # Set GRUB terminal type
 grub_terminal_type =
 
+# Additional default Grub options to be added
 additional_default_grub_options =
 
 [Storage]
