Allow to skip enabling network in configuration file

--- a/data/anaconda.conf
+++ b/data/anaconda.conf
@@ -69,6 +69,9 @@ default_on_boot = NONE
 # Set hostname
 hostname =
 
+# Allow to skip enabling network during installation
+skip_enable = False
+
 [Payload]
 # Default package environment.
 default_environment =
