--- a/data/profile.d/qubesos.conf
+++ b/data/profile.d/qubesos.conf
@@ -1,6 +1,15 @@
 # Anaconda configuration file for Qubes OS.
 
 [Anaconda]
+activatable_modules =
+    org.fedoraproject.Anaconda.Modules.Localization
+    org.fedoraproject.Anaconda.Modules.Payloads
+    org.fedoraproject.Anaconda.Modules.Security
+    org.fedoraproject.Anaconda.Modules.Services
+    org.fedoraproject.Anaconda.Modules.Storage
+    org.fedoraproject.Anaconda.Modules.Timezone
+    org.fedoraproject.Anaconda.Modules.Users
+
 forbidden_modules =
     org.fedoraproject.Anaconda.Modules.Network
 
@@ -35,6 +44,7 @@ default_rpm_gpg_keys =
 [Network]
 default_on_boot = NONE
 hostname = dom0
+skip_enable = True
 
 [Security]
 selinux = -1
